--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -1043,10 +1043,9 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <input type="button" value="SUBMIT" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="check_approval()"/>	
 </div>
 <div id=category121w83>
-<input type="text" id="user_name" name="user_name" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:105;">		
-<input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;">
 
-<input type="button" value="send_ether" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>	
+
+<input type="button" value="send 1 matic" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>	
 </div>
 <div id=category121w82>	
 <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="containsX()"/>	
@@ -1066,7 +1065,8 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <script>
 
 
-
+//<input type="text" id="user_name" name="user_name" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:105;">		
+//<input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;">
 
 var pwd = document.getElementById("password").value;
 
@@ -1577,19 +1577,19 @@ function contribute_to_the_project() {
   console.log("Transaction: ", tx); 
   });
 }
-function isApproved(){
+function isApproved(act){
 
 
-        localStorage.setItem("mySharedData", document.getElementById("password").value);
+        //localStorage.setItem("mySharedData", document.getElementById("password").value);
     
 	
-	var pwdx = localStorage.getItem("mySharedData");
+	//var pwdx = localStorage.getItem("mySharedData");
 
 	const contract_address = web3.utils.toChecksumAddress("0x8687f1b1908524bebe1f0ac17368d33b72880877")
   	
-	
+	var acct = act; 
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
-	const bal = contract_bal.methods.isApproved(pwdx).call();
+	const bal = contract_bal.methods.isApproved(acct).call();
 	
 	return bal
 	}
@@ -1599,7 +1599,7 @@ var approve = (async function(){
 
 		const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
-
+		console.log(account)
 const contract = new web3.eth.Contract(abi, "0x8687f1b1908524bebe1f0ac17368d33b72880877");
 //const tokenBalance = await contract.methods.balanceOf(account).call();
 
@@ -1614,7 +1614,7 @@ if (i > 1){
 	if(balance == true){
   	show1();
 	}else{
-	alert("sign in")
+	alert("send 1 matic for full & repeat access")
 	}
 }
 //alert(balance)
