--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -1068,7 +1068,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 //<input type="text" id="user_name" name="user_name" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:105;">		
 //<input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;">
 
-var pwd = document.getElementById("password").value;
+//var pwd = document.getElementById("password").value;
 
 	var i = 1;
 	var ii = 0
