--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -1532,11 +1532,11 @@ var acct = (async function(){
   	
   //var result = await getAccounts()
 	await window.ethereum.enable();
-	var pwd = document.getElementById("password").value;
- 	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.set_password(pwd).encodeABI();
-        const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+	//var pwd = document.getElementById("password").value;
+		const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
+        var _data = new web3.eth.Contract(abi, contract_address).methods.set_password(account).encodeABI();
+        
 	const result = await web3.eth.getTransactionCount(account)
 	_nonce = result
         console.log(account)
