--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -76,7 +76,7 @@ display: none;
 <h1 style="color:grey; font-family: helvetica narrow, sans-serif;">&#9096 CUSTOMS BROKER EXAMS </h3>
 <h2 style="color:grey; font-family: helvetica narrow, sans-serif;">April 2021</h4>	
 
- <a href="CBLExam118v2.html">April 2018 Customs Broker Exam</a>  
+
 
 <div id=category121w1 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
 <p class='question'>	1.  What is the CLASSIFICATION of the brassiere?	</p>
@@ -1045,7 +1045,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <div id=category121w83>
 
 
-<input type="button" value="send 1 matic" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>	
+<input type="button" value="send .25 matic" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>	
 </div>
 <div id=category121w82>	
 <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="containsX()"/>	
@@ -1064,7 +1064,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 
 <script>
 
-
+// <a href="CBLExam118v2.html">April 2018 Customs Broker Exam</a>  
 //<input type="text" id="user_name" name="user_name" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:105;">		
 //<input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;">
 
