--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -73,12 +73,13 @@ display: none;
 
 <body>
 
-<h1 style="color:grey; font-family: helvetica narrow, sans-serif;">&#9096 CUSTOMS BROKER EXAMS </h3>
+<center><h1 style="color:grey; font-family: helvetica narrow, sans-serif;">&#9096 CUSTOMS BROKER EXAMS &#9096</h3><center/>
 <h2 style="color:grey; font-family: helvetica narrow, sans-serif;">April 2021</h4>	
 
 
 
-<div id=category121w1 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
+<div id=category121w1 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 	Please use the identified commercial invoice to answer the question	
+<img id="logo" src=Apr2021_invoice.png></img>		
 <p class='question'>	1.  What is the CLASSIFICATION of the brassiere?	</p>
 <input type='radio' name='q121w1' value='A' id='q121w1'><label for=qZw1'A'>	A. 6212.10.3000	</label></br>
 <input type='radio' name='q121w1' value='B' id='q121w1'><label for=qZw1'B'>	B.  6212.10.5030	</label></br>
@@ -89,6 +90,7 @@ display: none;
 <p id="demo0"></p>		
 </div> 		
 <div id=category121w2 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 	Please use the identified commercial invoice to answer the question	
+<img id="logo" src=Apr2021_invoice.png></img>
 <p class='question'>	2.   What is CLASSIFICATION of the necklace?	</p>
 <input type='radio' name='q121w2' value='A' id='q121w2'><label for=qZw2'A'>	A. 7116.10.2500	</label></br>
 <input type='radio' name='q121w2' value='B' id='q121w2'><label for=qZw2'B'>	B.  7116.20.1500	</label></br>
@@ -99,6 +101,7 @@ display: none;
 <p id="demo1"></p>		
 </div> 		
 <div id=category121w3 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 	Please use the identified commercial invoice to answer the question	
+<img id="logo" src=Apr2021_invoice.png></img>
 <p class='question'>	3.   The port code to be identified on Block 20 of CBP Form 7501 is</p>
 <input type='radio' name='q121w3' value='A' id='q121w3'><label for=qZw3'A'>	A. 0904	</label></br>
 <input type='radio' name='q121w3' value='B' id='q121w3'><label for=qZw3'B'>	B.  0906	</label></br>
@@ -109,6 +112,7 @@ display: none;
 <p id="demo2"></p>		
 </div> 		
 <div id=category121w4 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 	Please use the identified commercial invoice to answer the question.	
+<img id="logo" src=Apr2021_invoice.png></img>
 <p class='question'>	4.  The party responsible for the payment of duties,taxes and fees is</p>
 <input type='radio' name='q121w4' value='A' id='q121w4'><label for=qZw4'A'>	A. the shipping line	</label></br>
 <input type='radio' name='q121w4' value='B' id='q121w4'><label for=qZw4'B'>	B.  Joy's Special Design	</label></br>
@@ -119,6 +123,7 @@ display: none;
 <p id="demo3"></p>		
 </div> 		
 <div id=category121w5 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 	Please use the identified commercial invoice to answer the question	
+<img id="logo" src=Apr2021_invoice.png></img>
 <p class='question'>	5.  What is the Manufacturer Identification Code (MID)?	</p>
 <input type='radio' name='q121w5' value='A' id='q121w5'><label for=qZw5'A'>	A. DESIG1640ITA	</label></br>
 <input type='radio' name='q121w5' value='B' id='q121w5'><label for=qZw5'B'>	B.  ITSIGCOY4000DEL	</label></br>
@@ -130,6 +135,7 @@ display: none;
 </div> 		
 <div id=category121w6 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
 	Please use the identified commercial invoice to answer the question.	
+<img id="logo" src=Apr2021_invoice.png></img>
 <p class='question'>	6.   What is the Harbor Maintenance fee for this shipment?	</p>
 <input type='radio' name='q121w6' value='A' id='q121w6'><label for=qZw6'A'>	A. $0.00	</label></br>
 <input type='radio' name='q121w6' value='B' id='q121w6'><label for=qZw6'B'>	B. $3.00	</label></br>
