--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -73,7 +73,7 @@ display: none;
 
 <body>
 
-<center><h1 style="color:grey; font-family: helvetica narrow, sans-serif;">&#9096 CUSTOMS BROKER EXAMS &#9096</h3><center/>
+<h3 style="color:grey; font-family: helvetica narrow, sans-serif;">&#9096 CUSTOMS BROKER EXAMS &#9096</h3>
 <h2 style="color:grey; font-family: helvetica narrow, sans-serif;">April 2021</h4>	
 
 
