--- a/9.html
+++ b/9.html
@@ -1446,7 +1446,86 @@ Note DDP to NY, NY door all duty and fees included"										119w47XX
 219w78X	 E General Note 12(n), subsection I,ii,iii,v,vi NAFTA										219w78XX
 219w79X	 E 9802.00.50, Subchapeter II Note3(f) to Chapter 98										219w79XX
 219w80X	 A General Note 29, 19 CFR 24.23(c)								219w80XX		
-
+122w1X	A ACE Business Rules – Chapter 7 Post Summary Correction (PSC), 7.5 In-Eligible Changes							122w1XX
+122w2X	C ACE Business Rules – Chapter 6 Temporary Importation Under Bond (TIB), 6.1 Processing – 6.4 TIB Closure Procedures							122w2XX
+122w3X	D Business Rules and Process Document (TradeExternal) ACE Entry Summary (Version 10.5) March 2021; Section 7.6							122w3XX
+122w4X	A 19 Code of Federal Regulations (CFR) 146.25 19 CFR 146.53							122w4XX
+122w5X	A 19 CFR 146.32							122w5XX
+122w6X	B 19 CFR 146.52							122w6XX
+122w7X	D 19 CFR Part 19 Section 19.1							122w7XX
+122w8X	D 19 CFR 144.5							122w8XX
+122w9X	C 19 CFR 146.23							122w9XX
+122w10X	D 19 CFR 19.44(a)							122w10XX
+122w11X	E 19 CFR 134.54(a)							122w11XX
+122w12X	B 19 CFR 134.2							122w12XX
+122w13X	C 19 CFR 134.55(b)(2) 19 CFR 24.16							122w13XX
+122w14X	A 19 CFR 123.10							122w14XX
+122w15X	C 19 CFR 171.2(b)(s) Subpart A							122w15XX
+122w16X	C 19 CFR 171.1(c)(2)							122w16XX
+122w17X	B 19 CFR 134.4							122w17XX
+122w18X	D 19 CFR 111.91(b)							122w18XX
+122w19X	C 19 CFR 142.3 19 CFR 142.16 19 CFR 141.22 19 CFR 141.24							122w19XX
+122w20X	B 19 CFR 151.16(c)							122w20XX
+122w21X	A 19 CFR 142.15							122w21XX
+122w22X	D 19 CFR 18.1(b)(4)							122w22XX
+122w23X	D 19 CFR 4.37(b)							122w23XX
+122w24X	D 19 CFR 10.31(a)(3)(iii)							122w24XX
+122w25X	B 19 CFR 114.23(a) Subpart C							122w25XX
+122w26X	D 19 CFR 141.89(a)							122w26XX
+122w27X	A 19 CFR 18.1(j)							122w27XX
+122w28X	B Right to Make Directive 3530-002A							122w28XX
+122w29X	E Harmonized Tariff Schedule of the United States (HTSUS) 9808.00.80 & Subchapter VIII, U.S. Note 1							122w29XX
+122w30X	B 19 CFR 141.32							122w30XX
+122w31X	C 19 CFR 10.38(c)							122w31XX
+122w32X	C 19 CFR 190.35							122w32XX
+122w33X	B 19 CFR 190.51(a)(2)							122w33XX
+122w34X	C 19 CFR 190.3(b)							122w34XX
+122w35X	C 19 CFR 113.21							122w35XX
+122w36X	B 19 CFR 113.62 19 CFR 113.64							122w36XX
+122w37X	D HTSUS Chapter 95 EN 9506(B)(4); GRI 1							122w37XX
+122w38X	D HTSUS Chapter 49, Note 1(c), GRI 1							122w38XX
+122w39X	B HTSUS 9603.29.8010							122w39XX
+122w40X	D HTSUS 0714.10.10							122w40XX
+122w41X	C HTSUS General Rules of Interpretation 1 & 6 HSTUS 8511.50.0000							122w41XX
+122w42X	B HTSUS 1604.14.1091, Subheading Note 2 of Chapter 16 HTSUS 0302.31.0000							122w42XX
+122w43X	C HTSUS 2923.10.0000 HTSUS 2842.90.9000 HTSUS Revision 8 (2021) Chapter 29 Notes 2(b) & Chapter 28 Notes 5							122w43XX
+122w44X	B HTSUS General Rules of Interpretation 1 & 6 HTSUS 8525.80.4000 HTSUS 8525.80.4000 HTSUS 8525.80.5015							122w44XX
+122w45X	D HTSUS 6802.93.0025							122w45XX
+122w46X	C HTSUS 2103.20.4020							122w46XX
+122w47X	C HTSUS 9813.00.55 19 CFR 10.31							122w47XX
+122w48X	A HTSUS 0201.30.1000, Chapters 2, 87, 95 & 97							122w48XX
+122w49X	C HTSUS 6213.90.0500 HTSUS Note 2(A) to Section XI, Note 7 Subheading 62 & Chapter 61							122w49XX
+122w50X	E 19 CFR 165.11(b)							122w50XX
+122w51X	B 19 CFR 165.24(c) 19 CFR 165.24(b)							122w51XX
+122w52X	B 19 CFR 174.12(e)							122w52XX
+122w53X	D 19 CFR 133.21							122w53XX
+122w54X	C 19 CFR 133.2(d) 19 CFR 133.5(d) 19 CFR 133.2(e) 19 CFR 133.5(b) 19 CFR 133.5(c)							122w54XX
+122w55X	B 19 CFR 133.43							122w55XX
+122w56X	B 19 CFR 152.106							122w56XX
+122w57X	E 19 CFR 159.32							122w57XX
+122w58X	C 19 CFR 152.103(a)(2) 19 CFR 152.102(f)							122w58XX
+122w59X	A 19 CFR 152.103(b)							122w59XX
+122w60X	D 19 CFR 132.17							122w60XX
+122w61X	A 19 CFR 10.402(c) 19 CFR 132.1							122w61XX
+122w62X	D 19 CFR 132.1 19 CFR 132.4 19 CFR 132.5 19 CFR 132.6							122w62XX
+122w63X	D 19 CFR 141.68(d)							122w63XX
+122w64X	C 19 CFR 132.11a(a)							122w64XX
+122w65X	D 19 CFR 24.23(c)							122w65XX
+122w66X	B 19 CFR 182 Appendix A Part III Section 7(3) 19 CFR 10.1015(d)(2)							122w66XX
+122w67X	C 19 CFR Appendix A to Part 182 Part III Section 18							122w67XX
+122w68X	D 19 CFR 141.35							122w68XX
+122w69X	D 19 CFR 12.44(b)							122w69XX
+122w70X	A 19 CFR158.11(b) 19 CFR 141.4 19 CFR 158.42							122w70XX
+122w71X	C ACE Entry Summary 2.4a							122w71XX
+122w72X	D 19 CFR 141.61 Subpart E (a)(3) ACE Entry Summary 2.4a							122w72XX
+122w73X	B 19 CFR 141.61 Subpart E(a)(1)(ii) 19 CFR 101.1 ACE Entry Summary Instructions 2.4a							122w73XX
+122w74X	D 19 CFR 24.23(b)							122w74XX
+122w75X	D 19 CFR 111.36							122w75XX
+122w76X	D 19 CFR 11.45(a)							122w76XX
+122w77X	A & E 19 CFR 111.24							122w77XX
+122w78X	E 19 CFR 111.36(c)(1)(2)							122w78XX
+122w79X	D 19 CFR 111.23(b)							122w79XX
+122w80X	C 19 CFR 111.1							122w80XX
 
 
 
