--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -8,7 +8,8 @@
 <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/master/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.js"></script>
 <!-- Moralis SDK code -->
 <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<script src="https://unpkg.com/moralis/dist/moralis.js"></script>
+
+<script src="https://unpkg.com/moralis-v1@latest/dist/moralis.js"></script>
 </script> 
   
 
@@ -83,7 +84,7 @@ font-size: large;
 
 
 <script>
-
+//src="https://unpkg.com/moralis/dist/moralis.js">
 	  const serverUrl = "https://jgvwtbhpz221.usemoralis.com:2053/server";
       const appId = "jWYZTSxykRh5PsXRtoXPWu3coM5QDQAWJCwvXR51";
       Moralis.start({ serverUrl, appId });
