--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/master/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.js"></script>
 <!-- Moralis SDK code -->
 <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<script src="https://unpkg.com/moralis/dist/moralis.js"></script>
+<script src="https://unpkg.com/moralis@2.0.1/lib/index.js"></script>
 </script> 
   
 
