--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1207,9 +1207,13 @@ var display = (async function(){
 	var _i = (i)
 	var newBtn = document.createElement('input');
 	newBtn.setAttribute('type', 'button');
-	newBtn.value = "accept trade";
+	newBtn.value = "approve";
 	//newBtn.setAttribute('onclick', 'to_approve(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + "," + _i + ')');
 	newBtn.setAttribute('onclick', 'to_approve(' + "[" + array_contract_ID2 + "]" + ","  + "'" + address + "'" + ", [" + array_tokenID2 + "]," + _i + ')');
+	var newBtn1 = document.createElement('input');
+	newBtn1.setAttribute('type', 'button');
+	newBtn1.value = "accept trade";
+	newBtn1.setAttribute('onclick', 'make_trade(' + "[" + array_contract_ID2 + "]" + ","  + "'" + address + "'" + ", [" + array_tokenID2 + "]," + _i + ')');
 	//console.log('make_trade(' + "'" + array_contract_ID2 + "'" + ","  + "'" + address + "'" + "," + array_tokenID2 + ')')
 	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large;";
 	
