--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1218,8 +1218,9 @@ var display = (async function(){
 	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large;";
 	
 	newBtn.id = 'a' + i;
-	
+	newBtn1.id = 'a' + i;
 	container.appendChild(newBtn);
+	container.appendChild(newBtn1);
 	//document.getElementById("r" & _i).appendChild(newBtn);
 	
 	
