--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1637,7 +1637,7 @@ var acct = (async function(){
 		
 		//var contract_address1 = web3.utils.toChecksumAddress(nft);
 		var contract_address1 = nft;
-		var supply = await web3.eth.Contract(abi, contract_address1).methods.balanceOfBatch(account, num).call();
+		var supply = await new web3.eth.Contract(abi, contract_address1).methods.balanceOfBatch(account, num).call();
 		console.log(supply);
         var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(num, address, 0).encodeABI();
         
