--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1636,7 +1636,7 @@ var acct = (async function(){
         var account = accounts[0];
 		
 		//var contract_address1 = web3.utils.toChecksumAddress(nft);
-		var contract_address1 = nft;
+		var contract_address1 = nft[0];
 		console.log(contract_address1)
 		var supply = new web3.eth.Contract(abi, contract_address1).methods.balanceOfBatch(account, num).call();
 		console.log(supply);
