--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1636,9 +1636,9 @@ var acct = (async function(){
         var account = accounts[0];
 		
 		var contract_address1 = web3.utils.toChecksumAddress(nft[0]);
-		//var contract_address1 = nft[0];
-		console.log(contract_address1)
-		var supply = new web3.eth.Contract(abi, contract_address1).methods.balanceOfBatch(account, num).call();
+		var contract_bal = await new web3.eth.Contract(abi, contract_address1);
+		var supply = await contract_bal.methods.balanceOfBatch(account, num).call();
+		
 		console.log(supply);
         var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(num, address, 0).encodeABI();
         
