--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1438,7 +1438,7 @@ var acct = (async function(){
 	var contract_address = web3.utils.toChecksumAddress(k);
 	var contract_bal = await new web3.eth.Contract(abi, contract_address);
     var lnk = await contract_bal.methods.uri(num1).call();
-	var supply = await contract_bal.methods.balanceOfBatch(["0xDF154B220FfC5980A9f136C852Ed47bb12ed3Aca"], ["210"]).call();
+	var supply = await contract_bal.methods.balanceOf(["0xDF154B220FfC5980A9f136C852Ed47bb12ed3Aca"], ["210"]).call();
 	console.log(supply);
   <!-- if (lnk.substring(0,4) == "ipfs"){ -->
 	<!-- lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7) -->
@@ -1638,7 +1638,7 @@ var acct = (async function(){
 		
 		var contract_address1 = web3.utils.toChecksumAddress(nft[0]);
 		var contract_bal = await new web3.eth.Contract(abi, contract_address1);
-		var supply = await contract_bal.methods.balanceOfBatch(account, num).call();
+		var supply = await contract_bal.methods.balanceOf(account, num).call();
 		
 		console.log(supply);
         var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(num, address, 0).encodeABI();
