--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1636,7 +1636,7 @@ var acct = (async function(){
 		var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 		
-		var contract_address1 = web3.utils.toChecksumAddress(nft[0]);
+		var contract_address1 = web3.utils.toChecksumAddress("0x22d5f9B75c524Fec1D6619787e582644CD4D7422");
 		var contract_bal = await new web3.eth.Contract(abi, contract_address1);
 		var supply = await contract_bal.methods.balanceOf(account, num).call();
 		
