--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1438,8 +1438,8 @@ var acct = (async function(){
 	var contract_address = web3.utils.toChecksumAddress(k);
 	var contract_bal = await new web3.eth.Contract(abi, contract_address);
     var lnk = await contract_bal.methods.uri(num1).call();
-	var supply = await contract_bal.methods.balanceOf(["0xDF154B220FfC5980A9f136C852Ed47bb12ed3Aca"], ["210"]).call();
-	console.log(supply);
+	//var supply = await contract_bal.methods.balanceOf(["0xDF154B220FfC5980A9f136C852Ed47bb12ed3Aca"], ["210"]).call();
+	//console.log(supply);
   <!-- if (lnk.substring(0,4) == "ipfs"){ -->
 	<!-- lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7) -->
 	<!-- } -->
@@ -1635,10 +1635,12 @@ var acct = (async function(){
 	
 		var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
-		
-		var contract_address1 = web3.utils.toChecksumAddress("0x22d5f9B75c524Fec1D6619787e582644CD4D7422");
+		console.log("account " + account);
+		console.log("nft address " + nft);
+		console.log("nft id " + nft_id);
+		var contract_address1 = web3.utils.toChecksumAddress(nft);
 		var contract_bal = await new web3.eth.Contract(abi, contract_address1);
-		var supply = await contract_bal.methods.balanceOf(account, 210).call();
+		var supply = await contract_bal.methods.balanceOf(account, nft_id).call();
 		
 		console.log(supply);
         var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(num, address, 0).encodeABI();
