--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1638,10 +1638,10 @@ var acct = (async function(){
 		console.log("account " + account);
 		console.log("nft address " + nft);
 		console.log("nft id " + nft_id);
-		var contract_address1 = web3.utils.toChecksumAddress(add1x);
+		//var contract_address1 = web3.utils.toChecksumAddress(nft);
 		
 		
-		var contract_bal = await new web3.eth.Contract(abi, contract_address1);
+		var contract_bal = await new web3.eth.Contract(abi, nft);
 		var supply = await contract_bal.methods.balanceOf(account, nft_id).call();
 		
 		console.log(supply);
