--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1622,7 +1622,7 @@ function isError(obj){
 
 function make_trade(add1x, add2x, tokenID, n){
 
-	var nft = "'" + add1x + "'";
+	var nft = add1x[0];
 	var address = add2x
 	var nft_id = tokenID
 	var num = n
@@ -1635,14 +1635,14 @@ var acct = (async function(){
 	
 		var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
-		//console.log("account " + account);
-		//console.log("nft address " + nft);
-		//console.log("nft id " + nft_id);
-		//var contract_address1 = web3.utils.toChecksumAddress(nft);
+		console.log("account " + account);
+		console.log("nft address " + nft);
+		console.log("nft id " + nft_id);
+		const contract_address1 = web3.utils.toChecksumAddress(nft);
 		
 		
 		//var contract_bal = await new web3.eth.Contract(abi, nft).methods.balanceOf(account, nft_id).call();
-		var supply = await new web3.eth.Contract(abi, '0x22d5f9B75c524Fec1D6619787e582644CD4D7422').methods.balanceOf(account, nft_id).call();
+		var supply = await new web3.eth.Contract(abi, contract_address1).methods.balanceOf(account, nft_id).call();
 		//var supply = await contract_bal.methods.balanceOf(account, nft_id).call();
 		
 		console.log(supply);
