--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1624,7 +1624,7 @@ function make_trade(add1x, add2x, tokenID, n){
 
 	var nft = add1x[0];
 	var address = add2x
-	var nft_id = tokenID
+	var nft_id = tokenID[0];
 	var num = n
 	
 	//to_approve(nft, nft_id)
