--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -1646,7 +1646,7 @@ var acct = (async function(){
 		//var supply = await contract_bal.methods.balanceOf(account, nft_id).call();
 		
 		console.log(supply);
-        var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(num, address, 0).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.accept_trade(num, address, supply).encodeABI();
         
 	var result = await web3.eth.getTransactionCount(account)
 	_nonce = result
