--- a/create_nft_swap_form_polygonx_live_v4.html
+++ b/create_nft_swap_form_polygonx_live_v4.html
@@ -160,10 +160,11 @@ display: block;
 <input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:462; right:795">contract token ID</label>
 
 <input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="loan_request()"/>	
+<input type="button" class="btn" value="approve" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>
 
 </div>
 
-<input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
+	
 
 <div id="content1"></div>
 <div id="content2"></div>
