--- a/create_nft_swap_form_polygonx_live_v4.html
+++ b/create_nft_swap_form_polygonx_live_v4.html
@@ -1454,8 +1454,8 @@ var acct = (async function(){
 	//console.log(img2);
  	var contract = web3.utils.toChecksumAddress(nft_k);
 	
-	const contract_address1 = web3.utils.toChecksumAddress(nft_k);
-	var supply = await new web3.eth.Contract(abi, contract_address1).methods.balanceOf(account, nft_id).call();
+	//const contract_address1 = web3.utils.toChecksumAddress(nft_k);
+	var supply = await new web3.eth.Contract(abi, contract).methods.balanceOf(account, nft_id).call();
 		//var supply = await contract_bal.methods.balanceOf(account, nft_id).call();
 		
 		console.log(supply);
