--- a/CBLExam122vMainPage2_1.htm
+++ b/CBLExam122vMainPage2_1.htm
@@ -2399,6 +2399,29 @@ const abi = [
 	}
 ]	
 
+
+
+ $(document).ready(function(){
+		var acct = (async function(){
+		//need to map address to nft id
+		const contract = web3.utils.toChecksumAddress("0xd5b82c2f0cac6b4180e5f8d5f0114c8325d4ec68")
+		const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+        const account = accounts[0];
+            var supply = await new web3.eth.Contract(abi, contract).methods.balanceOf(account, 0).call();
+		//var supply = await contract_bal.methods.balanceOf(account, nft_id).call();
+		
+		console.log("supply: " + supply);
+		})()
+        });
+
+
+		
+		
+		
+		
+		
+		
+		
 function getAccounts(){
 	const res = web3.eth.getAccounts(); 
 	return res;
