--- a/erc_1155_nft_transfer.html
+++ b/erc_1155_nft_transfer.html
@@ -1462,13 +1462,13 @@ var acct = (async function(){
 		
 		console.log(supply);
 	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.safeTransferFrom(contract, nft_id, loan_amt, loan_term, "").encodeABI();
+        var _data = new web3.eth.Contract(abi, contract).methods.safeTransferFrom(contract, nft_id, loan_amt, loan_term, "").encodeABI();
         
 	var result = await web3.eth.getTransactionCount(account)
 	_nonce = result
         console.log(account)
 		
-	await web3.eth.sendTransaction({'gas': web3.utils.toHex(700000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract_address, 'value': 100000001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
+	await web3.eth.sendTransaction({'gas': web3.utils.toHex(700000),'gasPrice': web3.utils.toHex(web3.utils.toWei('100', 'gwei')), 'from': account, 'to': contract, 'value': 100000001, 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
