--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -121,8 +121,10 @@ web3 = new Web3(web3.currentProvider);
 //));
 
 
-web3.eth.net.getNetworkType()
-.then(console.log);
+var net = web3.eth.net.getNetworkType().then(console.log);
+if(net == main){
+alert("Please switch to the Polygon Network to use the dApp");
+}
 
 web3.eth.net.isListening()
    .then(() => console.log('web3 is connected'))
