--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -122,7 +122,7 @@ web3 = new Web3(web3.currentProvider);
 
 
 var net = web3.eth.net.getNetworkType().then(console.log);
-if(net == main){
+if(net == "main"){
 alert("Please switch to the Polygon Network to use the dApp");
 }
 
