--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -132,7 +132,7 @@ web3.eth.net.getNetworkType().then(console.log);
 var my_nft =(async function(){
 
 var net = await web3.eth.net.getNetworkType()
-alert(net)
+//alert(net)
 if(net=="main")
 //if(str(net).indexOf("Polygon") > -1) 
 {alert("Please connect to the Polygon Network to use this dApp")};
