--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -71,7 +71,7 @@ font-size: large;
 <body>
 <center><img id="logo" src=barterNFT_logo_1155.png></img></center>
 
-<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; border: 10px solid orange; top:0.5; right:0;" onclick="open_window()">offer trade</button>
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: 40px;  position:absolute; border: 15px solid orange; top:0.5; right:0;" onclick="open_window()">offer trade</button>
 <center><p id="contract_address_ID"></p></center>
 
 	
