--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -132,8 +132,9 @@ web3.eth.net.getNetworkType().then(console.log);
 var my_nft =(async function(){
 
 var net = await web3.eth.net.getNetworkType()
-//alert(net)
-if(net=="main")
+var chain = await web3.eth.net.getId()
+alert(chain)
+if(chain!=137)
 //if(str(net).indexOf("Polygon") > -1) 
 {alert("Please connect to the Polygon Network to use this dApp")};
 })()
